// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualKeyboardButtons renders with virtual keyboard collapsed 1`] = `
<div
  className="virtualKeyboardButtons"
>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Tab-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Tab
    </span>
  </CustomizedDefaultButton>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Up-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <Memo(Icon)
        iconName="Up"
      />
      Up
    </span>
  </CustomizedDefaultButton>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Left-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <Memo(Icon)
        className="left"
        iconName="Up"
      />
      Left
    </span>
  </CustomizedDefaultButton>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Down-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <Memo(Icon)
        className="down"
        iconName="Up"
      />
      Down
    </span>
  </CustomizedDefaultButton>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Right-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <Memo(Icon)
        className="right"
        iconName="Up"
      />
      Right
    </span>
  </CustomizedDefaultButton>
  <CustomizedDefaultButton
    className="button"
    data-automation-id="virtual-keyboard-Enter-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Enter
    </span>
  </CustomizedDefaultButton>
</div>
`;

exports[`VirtualKeyboardButtons renders with virtual keyboard not collapsed 1`] = `
<div
  className="virtualKeyboardButtons"
>
  <CustomizedDefaultButton
    className="rectangleButton button"
    data-automation-id="virtual-keyboard-Tab-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Tab
    </span>
  </CustomizedDefaultButton>
  <div
    className="arrowButtonsContainer"
  >
    <CustomizedDefaultButton
      className="button"
      data-automation-id="virtual-keyboard-Up-button"
      onClick={[Function]}
      primary={true}
    >
      <span
        className="innerButtonContainer"
      >
        <Memo(Icon)
          iconName="Up"
        />
        Up
      </span>
    </CustomizedDefaultButton>
    <div
      className="bottomRowButtons"
    >
      <CustomizedDefaultButton
        className="button"
        data-automation-id="virtual-keyboard-Left-button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <Memo(Icon)
            className="left"
            iconName="Up"
          />
          Left
        </span>
      </CustomizedDefaultButton>
      <CustomizedDefaultButton
        className="button"
        data-automation-id="virtual-keyboard-Down-button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <Memo(Icon)
            className="down"
            iconName="Up"
          />
          Down
        </span>
      </CustomizedDefaultButton>
      <CustomizedDefaultButton
        className="button"
        data-automation-id="virtual-keyboard-Right-button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <Memo(Icon)
            className="right"
            iconName="Up"
          />
          Right
        </span>
      </CustomizedDefaultButton>
    </div>
  </div>
  <CustomizedDefaultButton
    className="rectangleButton button"
    data-automation-id="virtual-keyboard-Enter-button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Enter
    </span>
  </CustomizedDefaultButton>
</div>
`;
